[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://scene/Ballg.tscn" type="PackedScene" id=2]
[ext_resource path="res://stars.tscn" type="PackedScene" id=3]
[ext_resource path="res://Camera2D.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 64, 40.9633 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 264, 26.9662 )

[sub_resource type="Curve2D" id=3]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -114, -229.963, 0, 0, 0, 0, 109, -233.963 )
}

[node name="Main" type="Node2D" index="0"]

script = ExtResource( 1 )
Ballg = ExtResource( 2 )
Stars = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="." index="0"]

position = Vector2( 1, 2 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 4 )
_sections_unfolded = [ "Smoothing", "Transform" ]
cameramove = 50.0

[node name="Position2D" type="Position2D" parent="Camera2D" index="0"]

position = Vector2( -44, -302 )
_sections_unfolded = [ "Transform" ]

[node name="Position2D2" type="Position2D" parent="Camera2D" index="1"]

position = Vector2( 43, -300 )
_sections_unfolded = [ "Transform" ]

[node name="Area2D" type="Area2D" parent="Camera2D" index="2"]

position = Vector2( 3, -308 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 512
collision_mask = 128
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/Area2D" index="0"]

position = Vector2( -3, 20 )
shape = SubResource( 2 )

[node name="Areaend" type="Area2D" parent="Camera2D" index="3"]

position = Vector2( 3, -308 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 1024
collision_mask = 385
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/Areaend" index="0"]

position = Vector2( 11, 556 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="Camera2D" index="4"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[node name="Path2D" type="Path2D" parent="Camera2D" index="5"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
position = Vector2( 1, -129 )
curve = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="PathFollow2D" type="PathFollow2D" parent="Camera2D/Path2D" index="0"]

position = Vector2( -114, -229.963 )
rotation = -0.0179323
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
_sections_unfolded = [ "Transform" ]

[node name="Timerstar" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = true

[connection signal="body_exited" from="Camera2D/Area2D" to="." method="_on_Area2D_body_exited"]

[connection signal="body_exited" from="Camera2D/Areaend" to="." method="_on_Areaend_body_exited"]

[connection signal="timeout" from="Camera2D/Timer" to="Camera2D" method="_on_Timer_timeout"]

[connection signal="timeout" from="Timerstar" to="." method="_on_Timerstar_timeout"]


